deploy: 31dee2cd51aefa52f389ff9ee468b9e5ca21a35a

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -85,6 +85,7 @@
 <li><a href="yearn_treasury/rules/ignore/swaps/compound.html">yearn_treasury.rules.ignore.swaps.compound</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/gearbox.html">yearn_treasury.rules.ignore.swaps.gearbox</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/pooltogether.html">yearn_treasury.rules.ignore.swaps.pooltogether</a></li>
+<li><a href="yearn_treasury/rules/ignore/swaps/synthetix.html">yearn_treasury.rules.ignore.swaps.synthetix</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/uniswap.html">yearn_treasury.rules.ignore.swaps.uniswap</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/unwrapper.html">yearn_treasury.rules.ignore.swaps.unwrapper</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/vaults.html">yearn_treasury.rules.ignore.swaps.vaults</a></li>
