--- a/genindex.html
+++ b/genindex.html
@@ -292,6 +292,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.bugs.is_stycrv">is_stycrv() (in module yearn_treasury.rules.other_expense.bugs)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.synthetix.is_synthetix_swap">is_synthetix_swap() (in module yearn_treasury.rules.ignore.swaps.synthetix)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults.is_temple">is_temple() (in module yearn_treasury.rules.revenue.vaults)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.uniswap.is_uniswap_deposit">is_uniswap_deposit() (in module yearn_treasury.rules.ignore.swaps.uniswap)</a>
@@ -427,6 +429,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.gearbox">yearn_treasury.rules.ignore.swaps.gearbox</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.pooltogether">yearn_treasury.rules.ignore.swaps.pooltogether</a>
+</li>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.synthetix">yearn_treasury.rules.ignore.swaps.synthetix</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.uniswap">yearn_treasury.rules.ignore.swaps.uniswap</a>
 </li>
@@ -699,6 +703,13 @@
 
       <ul>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.pooltogether">module</a>
+</li>
+      </ul></li>
+      <li>
+    yearn_treasury.rules.ignore.swaps.synthetix
+
+      <ul>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.synthetix">module</a>
 </li>
       </ul></li>
       <li>
