deploy: 230efab071c97af23b66b103ae724a8ca8b5f057

--- a/genindex.html
+++ b/genindex.html
@@ -180,7 +180,11 @@
 </li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_bug_bounty">is_bug_bounty() (in module yearn_treasury.rules.expense.security)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.yfi.is_buyer_top_up">is_buyer_top_up() (in module yearn_treasury.rules.ignore.swaps.yfi)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.boost.is_buying_crv_for_boost">is_buying_crv_for_boost() (in module yearn_treasury.rules.other_expense.boost)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.yfi.is_buying_with_buyer">is_buying_with_buyer() (in module yearn_treasury.rules.ignore.swaps.yfi)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_chainsec_audit">is_chainsec_audit() (in module yearn_treasury.rules.expense.security)</a>
 </li>
@@ -260,10 +264,10 @@
 </li>
       <li><a href="source/yearn_treasury.rules.other_income.html#yearn_treasury.rules.other_income.is_robovault_share">is_robovault_share() (in module yearn_treasury.rules.other_income)</a>
 </li>
-      <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming.is_scream_rewards">is_scream_rewards() (in module yearn_treasury.rules.revenue.farming)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming.is_scream_rewards">is_scream_rewards() (in module yearn_treasury.rules.revenue.farming)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.seasolver.is_seasolver_slippage_revenue">is_seasolver_slippage_revenue() (in module yearn_treasury.rules.revenue.seasolver)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_sent_to_dinoswap">is_sent_to_dinoswap() (in module yearn_treasury.rules.ignore.passthru)</a>
@@ -438,6 +442,8 @@
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.vaults">yearn_treasury.rules.ignore.swaps.vaults</a>
 </li>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.yfi">yearn_treasury.rules.ignore.swaps.yfi</a>
+</li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.yla">yearn_treasury.rules.ignore.swaps.yla</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.html#module-yearn_treasury.rules.ignore.weth">yearn_treasury.rules.ignore.weth</a>
@@ -536,6 +542,8 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/yearn_treasury.html#yearn_treasury.vaults.v2">v2 (in module yearn_treasury.vaults)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.yfi.VYPER_BUYERS">VYPER_BUYERS (in module yearn_treasury.rules.ignore.swaps.yfi)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -733,6 +741,13 @@
 
       <ul>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.vaults">module</a>
+</li>
+      </ul></li>
+      <li>
+    yearn_treasury.rules.ignore.swaps.yfi
+
+      <ul>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.yfi">module</a>
 </li>
       </ul></li>
       <li>
