--- a/_modules/index.html
+++ b/_modules/index.html
@@ -89,6 +89,7 @@
 <li><a href="yearn_treasury/rules/ignore/swaps/uniswap.html">yearn_treasury.rules.ignore.swaps.uniswap</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/unwrapper.html">yearn_treasury.rules.ignore.swaps.unwrapper</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/vaults.html">yearn_treasury.rules.ignore.swaps.vaults</a></li>
+<li><a href="yearn_treasury/rules/ignore/swaps/yfi.html">yearn_treasury.rules.ignore.swaps.yfi</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/yla.html">yearn_treasury.rules.ignore.swaps.yla</a></li>
 <li><a href="yearn_treasury/rules/ignore/weth.html">yearn_treasury.rules.ignore.weth</a></li>
 <li><a href="yearn_treasury/rules/ignore/ygov.html">yearn_treasury.rules.ignore.ygov</a></li>
