deploy: b1ff9b1e58e6e7c2dc65d1c2c0cbbf78502bb382

--- a/genindex.html
+++ b/genindex.html
@@ -200,6 +200,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.seasolver.is_cowswap_incentive">is_cowswap_incentive() (in module yearn_treasury.rules.revenue.seasolver)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.cowswap.is_cowswap_swap">is_cowswap_swap() (in module yearn_treasury.rules.ignore.swaps.cowswap)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.staking.is_curve_gauge">is_curve_gauge() (in module yearn_treasury.rules.ignore.staking)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.bugs.is_dai_vault_reimbursement">is_dai_vault_reimbursement() (in module yearn_treasury.rules.other_expense.bugs)</a>
@@ -429,6 +431,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.aave">yearn_treasury.rules.ignore.swaps.aave</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.compound">yearn_treasury.rules.ignore.swaps.compound</a>
+</li>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.cowswap">yearn_treasury.rules.ignore.swaps.cowswap</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.gearbox">yearn_treasury.rules.ignore.swaps.gearbox</a>
 </li>
@@ -697,6 +701,13 @@
 
       <ul>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.compound">module</a>
+</li>
+      </ul></li>
+      <li>
+    yearn_treasury.rules.ignore.swaps.cowswap
+
+      <ul>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.cowswap">module</a>
 </li>
       </ul></li>
       <li>
