deploy: 360ff6dec843de535f5134a873d543e531341930

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -85,6 +85,7 @@
 <li><a href="yearn_treasury/rules/ignore/swaps/compound.html">yearn_treasury.rules.ignore.swaps.compound</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/cowswap.html">yearn_treasury.rules.ignore.swaps.cowswap</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/gearbox.html">yearn_treasury.rules.ignore.swaps.gearbox</a></li>
+<li><a href="yearn_treasury/rules/ignore/swaps/iearn.html">yearn_treasury.rules.ignore.swaps.iearn</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/pooltogether.html">yearn_treasury.rules.ignore.swaps.pooltogether</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/synthetix.html">yearn_treasury.rules.ignore.swaps.synthetix</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/uniswap.html">yearn_treasury.rules.ignore.swaps.uniswap</a></li>
