--- a/_modules/yearn_treasury/rules/ignore/swaps/aave.html
+++ b/_modules/yearn_treasury/rules/ignore/swaps/aave.html
@@ -74,6 +74,7 @@
 <span></span><span class="kn">from</span><span class="w"> </span><span class="nn">typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Final</span>
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">dao_treasury</span><span class="w"> </span><span class="kn">import</span> <span class="n">TreasuryTx</span><span class="p">,</span> <span class="n">TreasuryWallet</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">eth_typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">ChecksumAddress</span>
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">yearn_treasury.rules.constants</span><span class="w"> </span><span class="kn">import</span> <span class="n">ZERO_ADDRESS</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">yearn_treasury.rules.ignore.swaps</span><span class="w"> </span><span class="kn">import</span> <span class="n">swaps</span>
@@ -98,27 +99,31 @@
 <a class="viewcode-back" href="../../../../../source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.aave.is_aave_withdrawal">[docs]</a>
 <span class="nd">@aave</span><span class="p">(</span><span class="s2">&quot;Withdrawal&quot;</span><span class="p">)</span>
 <span class="k">async</span> <span class="k">def</span><span class="w"> </span><span class="nf">is_aave_withdrawal</span><span class="p">(</span><span class="n">tx</span><span class="p">:</span> <span class="n">TreasuryTx</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
+    <span class="n">from_address</span><span class="p">:</span> <span class="n">ChecksumAddress</span> <span class="o">=</span> <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span><span class="o">.</span><span class="n">address</span>  <span class="c1"># type: ignore [union-attr, assignment]</span>
+    <span class="n">to_address</span><span class="p">:</span> <span class="n">ChecksumAddress</span> <span class="o">=</span> <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span><span class="o">.</span><span class="n">address</span>  <span class="c1"># type: ignore [union-attr, assignment]</span>
     <span class="c1"># Atoken side</span>
     <span class="k">if</span> <span class="p">(</span>
-        <span class="n">TreasuryWallet</span><span class="o">.</span><span class="n">_get_instance</span><span class="p">(</span><span class="n">tx</span><span class="o">.</span><span class="n">from_address</span><span class="o">.</span><span class="n">address</span><span class="p">)</span>  <span class="c1"># type: ignore [union-attr, arg-type]</span>
-        <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span> <span class="o">==</span> <span class="n">ZERO_ADDRESS</span>
-        <span class="ow">and</span> <span class="nb">hasattr</span><span class="p">(</span><span class="n">tx</span><span class="o">.</span><span class="n">token</span><span class="o">.</span><span class="n">contract</span><span class="p">,</span> <span class="s2">&quot;underlyingAssetAddress&quot;</span><span class="p">)</span>
+        <span class="n">TreasuryWallet</span><span class="o">.</span><span class="n">check_membership</span><span class="p">(</span><span class="n">from_address</span><span class="p">,</span> <span class="n">tx</span><span class="o">.</span><span class="n">block</span><span class="p">)</span>  <span class="c1"># type: ignore [union-attr, arg-type]</span>
+        <span class="ow">and</span> <span class="n">to_address</span> <span class="o">==</span> <span class="n">ZERO_ADDRESS</span>
     <span class="p">):</span>
-        <span class="k">for</span> <span class="n">event</span> <span class="ow">in</span> <span class="n">tx</span><span class="o">.</span><span class="n">get_events</span><span class="p">(</span><span class="s2">&quot;RedeemUnderlying&quot;</span><span class="p">):</span>
-            <span class="k">if</span> <span class="p">(</span>
-                <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">event</span><span class="p">[</span><span class="s2">&quot;_user&quot;</span><span class="p">]</span>
-                <span class="ow">and</span> <span class="k">await</span> <span class="n">tx</span><span class="o">.</span><span class="n">token</span><span class="o">.</span><span class="n">contract</span><span class="o">.</span><span class="n">underlyingAssetAddress</span> <span class="o">==</span> <span class="n">event</span><span class="p">[</span><span class="s2">&quot;_reserve&quot;</span><span class="p">]</span>
-                <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">token</span><span class="o">.</span><span class="n">scale_value</span><span class="p">(</span><span class="n">event</span><span class="p">[</span><span class="s2">&quot;_amount&quot;</span><span class="p">])</span> <span class="o">==</span> <span class="n">tx</span><span class="o">.</span><span class="n">amount</span>
-            <span class="p">):</span>
-                <span class="k">return</span> <span class="kc">True</span>
+        <span class="n">token</span> <span class="o">=</span> <span class="n">tx</span><span class="o">.</span><span class="n">token</span>
+        <span class="k">if</span> <span class="nb">hasattr</span><span class="p">(</span><span class="n">token</span><span class="o">.</span><span class="n">contract</span><span class="p">,</span> <span class="s2">&quot;underlyingAssetAddress&quot;</span><span class="p">):</span>
+            <span class="k">for</span> <span class="n">event</span> <span class="ow">in</span> <span class="n">tx</span><span class="o">.</span><span class="n">get_events</span><span class="p">(</span><span class="s2">&quot;RedeemUnderlying&quot;</span><span class="p">):</span>
+                <span class="k">if</span> <span class="p">(</span>
+                    <span class="n">from_address</span> <span class="o">==</span> <span class="n">event</span><span class="p">[</span><span class="s2">&quot;_user&quot;</span><span class="p">]</span>
+                    <span class="ow">and</span> <span class="k">await</span> <span class="n">token</span><span class="o">.</span><span class="n">contract</span><span class="o">.</span><span class="n">underlyingAssetAddress</span> <span class="o">==</span> <span class="n">event</span><span class="p">[</span><span class="s2">&quot;_reserve&quot;</span><span class="p">]</span>
+                    <span class="ow">and</span> <span class="n">token</span><span class="o">.</span><span class="n">scale_value</span><span class="p">(</span><span class="n">event</span><span class="p">[</span><span class="s2">&quot;_amount&quot;</span><span class="p">])</span> <span class="o">==</span> <span class="n">tx</span><span class="o">.</span><span class="n">amount</span>
+                <span class="p">):</span>
+                    <span class="k">return</span> <span class="kc">True</span>
 
     <span class="c1"># Underlying side</span>
-    <span class="k">if</span> <span class="n">TreasuryWallet</span><span class="o">.</span><span class="n">_get_instance</span><span class="p">(</span><span class="n">tx</span><span class="o">.</span><span class="n">to_address</span><span class="o">.</span><span class="n">address</span><span class="p">):</span>  <span class="c1"># type: ignore [union-attr, arg-type]</span>
+    <span class="k">if</span> <span class="n">TreasuryWallet</span><span class="o">.</span><span class="n">check_membership</span><span class="p">(</span><span class="n">tx</span><span class="o">.</span><span class="n">to_address</span><span class="o">.</span><span class="n">address</span><span class="p">,</span> <span class="n">tx</span><span class="o">.</span><span class="n">block</span><span class="p">):</span>  <span class="c1"># type: ignore [union-attr, arg-type]</span>
+        <span class="n">token</span> <span class="o">=</span> <span class="n">tx</span><span class="o">.</span><span class="n">token</span>
         <span class="k">for</span> <span class="n">event</span> <span class="ow">in</span> <span class="n">tx</span><span class="o">.</span><span class="n">get_events</span><span class="p">(</span><span class="s2">&quot;RedeemUnderlying&quot;</span><span class="p">):</span>
             <span class="k">if</span> <span class="p">(</span>
-                <span class="n">tx</span><span class="o">.</span><span class="n">token</span> <span class="o">==</span> <span class="n">event</span><span class="p">[</span><span class="s2">&quot;_reserve&quot;</span><span class="p">]</span>
-                <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span> <span class="o">==</span> <span class="n">event</span><span class="p">[</span><span class="s2">&quot;_user&quot;</span><span class="p">]</span>
-                <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">token</span><span class="o">.</span><span class="n">scale_value</span><span class="p">(</span><span class="n">event</span><span class="p">[</span><span class="s2">&quot;_amount&quot;</span><span class="p">])</span> <span class="o">==</span> <span class="n">tx</span><span class="o">.</span><span class="n">amount</span>
+                <span class="n">token</span> <span class="o">==</span> <span class="n">event</span><span class="p">[</span><span class="s2">&quot;_reserve&quot;</span><span class="p">]</span>
+                <span class="ow">and</span> <span class="n">to_address</span> <span class="o">==</span> <span class="n">event</span><span class="p">[</span><span class="s2">&quot;_user&quot;</span><span class="p">]</span>
+                <span class="ow">and</span> <span class="n">token</span><span class="o">.</span><span class="n">scale_value</span><span class="p">(</span><span class="n">event</span><span class="p">[</span><span class="s2">&quot;_amount&quot;</span><span class="p">])</span> <span class="o">==</span> <span class="n">tx</span><span class="o">.</span><span class="n">amount</span>
             <span class="p">):</span>
                 <span class="k">return</span> <span class="kc">True</span>
 
