--- a/genindex.html
+++ b/genindex.html
@@ -234,6 +234,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_idle">is_idle() (in module yearn_treasury.rules.ignore.passthru)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.iearn.is_iearn_withdrawal">is_iearn_withdrawal() (in module yearn_treasury.rules.ignore.swaps.iearn)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults.is_inverse_fees_from_stash_contract">is_inverse_fees_from_stash_contract() (in module yearn_treasury.rules.revenue.vaults)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_inverse_fees_from_yearn_fed">is_inverse_fees_from_yearn_fed() (in module yearn_treasury.rules.ignore.passthru)</a>
@@ -264,10 +266,10 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_rkp3r">is_rkp3r() (in module yearn_treasury.rules.ignore.passthru)</a>
 </li>
-      <li><a href="source/yearn_treasury.rules.other_income.html#yearn_treasury.rules.other_income.is_robovault_share">is_robovault_share() (in module yearn_treasury.rules.other_income)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/yearn_treasury.rules.other_income.html#yearn_treasury.rules.other_income.is_robovault_share">is_robovault_share() (in module yearn_treasury.rules.other_income)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming.is_scream_rewards">is_scream_rewards() (in module yearn_treasury.rules.revenue.farming)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.seasolver.is_seasolver_slippage_revenue">is_seasolver_slippage_revenue() (in module yearn_treasury.rules.revenue.seasolver)</a>
@@ -435,6 +437,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.cowswap">yearn_treasury.rules.ignore.swaps.cowswap</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.gearbox">yearn_treasury.rules.ignore.swaps.gearbox</a>
+</li>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.iearn">yearn_treasury.rules.ignore.swaps.iearn</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.pooltogether">yearn_treasury.rules.ignore.swaps.pooltogether</a>
 </li>
@@ -718,6 +722,13 @@
 </li>
       </ul></li>
       <li>
+    yearn_treasury.rules.ignore.swaps.iearn
+
+      <ul>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.iearn">module</a>
+</li>
+      </ul></li>
+      <li>
     yearn_treasury.rules.ignore.swaps.pooltogether
 
       <ul>
@@ -731,6 +742,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.synthetix">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     yearn_treasury.rules.ignore.swaps.uniswap
 
@@ -738,8 +751,6 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.uniswap">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     yearn_treasury.rules.ignore.swaps.unwrapper
 
