deploy: 3077fa24e5ab6dd8fd2b6d4d34082a9bfafedc75

--- a/genindex.html
+++ b/genindex.html
@@ -96,19 +96,33 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.__init__">__init__() (yearn_treasury.budget.BudgetRequest method)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._get_coin_at_index">_get_coin_at_index() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults._get_controller">_get_controller() (in module yearn_treasury.rules.revenue.vaults)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._get_lp_token">_get_lp_token() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults._get_rewards">_get_rewards() (in module yearn_treasury.rules.revenue.vaults)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_curve_withdrawal_multi">_is_curve_withdrawal_multi() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_curve_withdrawal_one">_is_curve_withdrawal_one() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming._is_generic_comp_rewards">_is_generic_comp_rewards() (in module yearn_treasury.rules.revenue.farming)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_new_style">_is_new_style() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_old_style">_is_old_style() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults._is_single_sided">_is_single_sided() (in module yearn_treasury.rules.revenue.vaults)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults._is_y3crv">_is_y3crv() (in module yearn_treasury.rules.revenue.vaults)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults._is_ypool">_is_ypool() (in module yearn_treasury.rules.revenue.vaults)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._token_is_curvey">_token_is_curvey() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -202,7 +216,11 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.cowswap.is_cowswap_swap">is_cowswap_swap() (in module yearn_treasury.rules.ignore.swaps.cowswap)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve.is_curve_deposit">is_curve_deposit() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.staking.is_curve_gauge">is_curve_gauge() (in module yearn_treasury.rules.ignore.staking)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve.is_curve_withdrawal">is_curve_withdrawal() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.bugs.is_dai_vault_reimbursement">is_dai_vault_reimbursement() (in module yearn_treasury.rules.other_expense.bugs)</a>
 </li>
@@ -264,10 +282,10 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.general.is_returned_fundus">is_returned_fundus() (in module yearn_treasury.rules.ignore.general)</a>
 </li>
-      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_rkp3r">is_rkp3r() (in module yearn_treasury.rules.ignore.passthru)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_rkp3r">is_rkp3r() (in module yearn_treasury.rules.ignore.passthru)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.other_income.html#yearn_treasury.rules.other_income.is_robovault_share">is_robovault_share() (in module yearn_treasury.rules.other_income)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming.is_scream_rewards">is_scream_rewards() (in module yearn_treasury.rules.revenue.farming)</a>
@@ -435,6 +453,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.compound">yearn_treasury.rules.ignore.swaps.compound</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.cowswap">yearn_treasury.rules.ignore.swaps.cowswap</a>
+</li>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.curve">yearn_treasury.rules.ignore.swaps.curve</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.gearbox">yearn_treasury.rules.ignore.swaps.gearbox</a>
 </li>
@@ -712,6 +732,13 @@
 
       <ul>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.cowswap">module</a>
+</li>
+      </ul></li>
+      <li>
+    yearn_treasury.rules.ignore.swaps.curve
+
+      <ul>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.curve">module</a>
 </li>
       </ul></li>
       <li>
