--- a/_modules/index.html
+++ b/_modules/index.html
@@ -84,6 +84,7 @@
 <li><a href="yearn_treasury/rules/ignore/swaps/aave.html">yearn_treasury.rules.ignore.swaps.aave</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/compound.html">yearn_treasury.rules.ignore.swaps.compound</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/cowswap.html">yearn_treasury.rules.ignore.swaps.cowswap</a></li>
+<li><a href="yearn_treasury/rules/ignore/swaps/curve.html">yearn_treasury.rules.ignore.swaps.curve</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/gearbox.html">yearn_treasury.rules.ignore.swaps.gearbox</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/iearn.html">yearn_treasury.rules.ignore.swaps.iearn</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/pooltogether.html">yearn_treasury.rules.ignore.swaps.pooltogether</a></li>
